# archer

./: .env.example  .gitignore  CLAUDE.md  LICENSE  pyproject.toml  requirements.txt
config/: repos.yaml
docs/: prd_v1.md
launchd/: com.velo9.archer.plist
legacy/: README.md  install-crew.sh  kri-codex-sweeper.sh  kri-evening-qa.sh  kri-morning-summary.sh  kri-overnight-build.sh
src/: app.py  config.py
src/core/: telegram.py
